# omniaudit-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  quality.yml  release.yml  security-audit.yml  smoke-harding-pass2.yml
apps/mcp_server/: main.py
docs/: ARCHITECTURE.md  CHANGELOG_POLICY.md  OPERATIONS.md  REPO_GOVERNANCE.md  ROADMAP.md  SECURITY.md
docs/observability/: dashboard-baseline.md  prometheus-alerts.yml
infra/: Dockerfile.api  Dockerfile.worker
scripts/: bootstrap.sh  install_sitelint_toolchain.sh  smoke_hardening_pass2.sh
scripts/drills/: drill_github_api_outage.sh  drill_s3_unavailability.sh  drill_worker_restart_resume.sh
services/worker/: tasks.py  worker.py
tests/: conftest.py
tests/fixtures/: adriana_deterministic_findings.json
tests/integration/: test_mcp_protocol.py
tests/unit/: test_auditlens_wave1.py  test_confirmation.py  test_container_tls_config.py  test_cov_app.py  test_cov_auditlens.py  test_cov_github.py  test_cov_observability.py  test_cov_releasebutler.py  test_cov_runtime.py  test_cov_scanner.py  test_cov_security.py  test_cov_sitelint_service.py  test_cov_storage.py  test_cov_worker.py  test_findings_parser.py  test_jobs.py  test_object_store_adapters.py  test_observability.py  test_policy.py  test_rate_limit.py  test_release_checksum.py  test_releasebutler_hardening.py  test_releasebutler_wave1.py  test_settings.py  test_sitelint_event_loop.py  (+3 more)
